@@ -1,7 +1,8 @@
 2011-08-07 Borut Razem <borut.razem AT gmail.com>
 
 	* src/SDCCopt.c: fixed bug #3387421: Incorrect code in revision 6723
-	* support/regression/test/compare_2_n.c: added test cases for bug #3387421
+	* support/regression/test/compare_2_n.c:
+	  added test cases for bug #3387421 and for 0x0000 and 0xffff
 
 2011-08-06 Borut Razem <borut.razem AT gmail.com>
 
